infrastructure/monitoring/alertmanager-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
  namespace: monitoring
  labels:
    app: alertmanager-discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-discord
  template:
    metadata:
      labels:
        app: alertmanager-discord
    spec:
      containers:
      - name: alertmanager-discord
        # Note: This image has no versioned releases. Using latest (commit: 89ef841)
        # See: https://github.com/benjojo/alertmanager-discord
        image: benjojo/alertmanager-discord:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9094
          name: http
        resources:
          requests:
            memory: 32Mi
            cpu: 25m
          limits:
            memory: 128Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  selector:
    app: alertmanager-discord
  ports:
  - port: 9094
    targetPort: 9094
    name: http
